# quiz

./: .clangd  CMakeLists.txt  README.md  conanfile.txt
.github/workflows/: cmake-single-platform.yml  main.yml
assets/: cards.json
include/: CardService.hpp
src/: CardService.cpp  main.cpp
templates/: card.html  index.html  nav_bar.html  topic.html
